--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint:fix": "./node_modules/.bin/eslint . --fix"
   },
   "dependencies": {
-    "shr-models": "~4.1.0"
+    "shr-models": "standardhealth/shr-models#grammar_4_map"
   },
   "devDependencies": {
     "chai": "^3.5.0",
