--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "shr-expand",
-  "version": "4.1.0",
+  "version": "4.2.0",
   "description": "Expands SHR data elements to copy down fields from data elements they're based on and consolidates their constraints; does similar for mappings.",
   "author": "",
   "license": "Apache-2.0",
@@ -17,7 +17,7 @@
     "lint:fix": "./node_modules/.bin/eslint . --fix"
   },
   "dependencies": {
-    "shr-models": "~4.1.0"
+    "shr-models": "standardhealth/shr-models.git#grammar_4.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
