--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "lint:fix": "./node_modules/.bin/eslint . --fix"
   },
   "dependencies": {
+    "bunyan": "^1.8.9",
     "shr-models": "standardhealth/shr-models.git#grammar_4.2"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "eslint": "^3.6.1",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "shr-test-helpers": "standardhealth/shr-test-helpers.git#grammar_4.2"
   }
 }
