--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {
     "bunyan": "^1.8.9",
-    "shr-models": "^5.1.0"
+    "shr-models": "https://github.com/standardhealth/shr-models#model-inheritance"
   },
   "devDependencies": {
     "chai": "^3.5.0",
