--- a/package.json
+++ b/package.json
@@ -21,11 +21,11 @@
     "chai": "^3.5.0",
     "eslint": "^3.6.1",
     "mocha": "^3.2.0",
-    "shr-models": "standardhealth/shr-models#underscore_kw",
-    "shr-test-helpers": "standardhealth/shr-test-helpers#underscore_kw"
+    "shr-models": "^5.4.0",
+    "shr-test-helpers": "^5.1.3"
   },
   "peerDependencies": {
     "bunyan": "^1.8.9",
-    "shr-models": "^5.3.0"
+    "shr-models": "^5.4.0"
   }
 }
