--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "chai": "^3.5.0",
     "eslint": "^3.6.1",
     "mocha": "^3.2.0",
-    "shr-models": "^5.5.0",
+    "shr-models": "^5.5.3-beta.1",
     "shr-test-helpers": "^5.1.3"
   },
   "peerDependencies": {
